tests/negative/neg_rule3_expression.safe
-- Test: neg_rule3_expression
-- Description: Division where the divisor is a complex expression that may be zero.
--   The expression X * X - Y * Y is zero when X = Y or X = -Y.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p133:0610d951
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p134:90a17a3b
-- Expected: REJECT division_by_zero

package Expression_Div_Test is

   type Value is range -100 .. 100;

   --  Compute: divides by X^2 - Y^2 which is zero when |X| = |Y|.
   function Compute (N : Value; X, Y : Value) return Integer is
      Denom : Integer;
   begin
      Denom = Integer (X) * Integer (X) - Integer (Y) * Integer (Y);
      return Integer (N) / Denom;  -- ERROR: Denom may be zero
   end Compute;

end Expression_Div_Test;
